@@ -1,4 +1,4 @@
-// Copyright (c) 2020, 2021, Oracle and/or its affiliates.
+// Copyright (c) 2020, 2022, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.weblogic.kubernetes.utils;
@@ -123,7 +123,7 @@ public class IstioUtils {
     if (result.stdout() == null) {
       return 0;
     } else {
-      return new Integer(result.stdout());
+      return Integer.valueOf(result.stdout());
     }
   }
 
@@ -149,7 +149,7 @@ public class IstioUtils {
     if (result.stdout() == null) {
       return 0;
     } else {
-      return new Integer(result.stdout());
+      return Integer.valueOf(result.stdout());
     }
   }
 
@@ -175,7 +175,7 @@ public class IstioUtils {
     if (result.stdout() == null) {
       return 0;
     } else {
-      return new Integer(result.stdout());
+      return Integer.valueOf(result.stdout());
     }
   }
 
